filtering on allUsers and allRecords
